[gd_scene load_steps=2 format=3 uid="uid://c3gn6t17ucxon"]

[ext_resource type="Script" path="res://scenes/spawner/spawner.gd" id="1_r6vv1"]

[node name="Spawner" type="Node2D"]
script = ExtResource("1_r6vv1")

[node name="LeftSpawner" type="Node" parent="."]

[node name="1" type="Marker2D" parent="LeftSpawner"]
position = Vector2(-46, 34)

[node name="2" type="Marker2D" parent="LeftSpawner"]
position = Vector2(-46, 74)

[node name="3" type="Marker2D" parent="LeftSpawner"]
position = Vector2(-46, 122)

[node name="4" type="Marker2D" parent="LeftSpawner"]
position = Vector2(-46, 162)

[node name="RightSpawner" type="Node" parent="."]

[node name="1" type="Marker2D" parent="RightSpawner"]
position = Vector2(354, 34)

[node name="2" type="Marker2D" parent="RightSpawner"]
position = Vector2(354, 74)

[node name="3" type="Marker2D" parent="RightSpawner"]
position = Vector2(354, 122)

[node name="4" type="Marker2D" parent="RightSpawner"]
position = Vector2(354, 162)

[node name="SpawnSharkTimer" type="Timer" parent="."]
wait_time = 6.0
autostart = true

[node name="SpawnPersonTimer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[connection signal="timeout" from="SpawnSharkTimer" to="." method="_on_spawn_shark_timer_timeout"]
[connection signal="timeout" from="SpawnPersonTimer" to="." method="_on_spawn_person_timer_timeout"]
